refactor(191): reduce cognitive complexity in SubmissionServiceImpl (Sonar)